--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,3 +1,7 @@
+*{
+    /* font-weight: 700; */
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
